[package]
name = "nova-example"
version = "0.0.0"
edition = "2021"
description = "Demonstration of using the Nova library"
authors = [
    "cyphersnake <cyphersnake@pm.me>"
]
repository = "https://github.com/cyphersnake/nove_example"
license = "MIT"

[dependencies]
bellperson = "0.25.0"
nova-snark = "0.21.0"
pasta_curves = "0.5.1"
